yamls/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: %name%
  annotations:
   # nginx.ingress.kubernetes.io/rewrite-target: /
   kubernetes.io/ingress.class: "test"
spec:
  rules:
  - host: test.springbootdemo.com
    http:
      paths:
      - path: /
        backend:
          serviceName: %name%
          servicePort: 8080
